<resources>
    <string name="app_name">Bintina Mood Tracker</string>
    <string name="test_text">This is to check size</string>
    <string name="seven_days_ago">Seven days ago</string>
    <string name="six_days_ago">Six days ago</string>
    <string name="five_days_ago">Five days ago</string>
    <string name="four_days_ago">Four days ago</string>
    <string name="three_days_ago">Three days ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="custom_note_content">custom_note_content</string>
    <string name="mood_reason_question">What made you feel that way?</string>
    <string name="one_week_ago">One Week Ago</string>
</resources>